--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "20.x"
-      - run: npm ci
+      - run: yarn ci
       - run: npm run build
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
