--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
