--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test": "react-scripts test",
     "compile_scss_dev": "sass --load-path=./node_modules/@uswds/uswds/packages/ --embed-source-map --quiet-deps src/styles/global.scss:src/content/generated/global.out.css",
     "watch_scss": "yarn compile_scss_dev && sass --load-path=./node_modules/@uswds/uswds/packages/ --embed-source-map --quiet-deps -w src/styles/global.scss:src/content/generated/global.out.css",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build --dist 'build' --branch 'main'"
+    "deploy": "yarn run build && gh-pages -d build --dist 'build' --branch 'main'"
   },
   "eslintConfig": {
     "extends": [
